--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
    <div class="mainbox">
-	<div class="right_container">
-	 <section class="right_Container">
+	<div class="right_container Right_Box">
+	 <section class="Container Right_Container">
 	  <header>
 		<nav>
 			<ul>
@@ -27,12 +27,12 @@
 			</ul>
 		</nav>
 		<div class="img_box">
-			<img class="myimg" src="right.jpg" alt="Bruce Wilson's Image">
+			<img class="myimg" src="Image/right.jpg" alt="Bruce Wilson's Image">
 		</div>
 	  </header>
 	 </section>
 	</div>
-	<div class="left_container">
+	<div class="left_container Left_Box">
 	 <section class="Container">
 	  <div id="Home" class="Home_container">
 		<h3 class="subtitle">Introduction</h3>
@@ -45,47 +45,56 @@
 	 </section>
 	 <section class="Container">
 	  <div id="About" class="About_container">
+		  <div class="about_title">
 		<h3 class="subtitle">About Me</h3>
 		<h3 class="title">Biography</h3>
 		<p class="resumo_desc">I'm a Freelancer Front-end Developer with over 12 years of experience. I'm from San Francisco. I code and create web elements for amazing people around the world. I like work with new people. New people are new experiences.</p>
-		<div class="tableItems">
+		</div>
+		<div class="about_info">
+		<div class="about_left tableItems">
 		 <table>
+			 <tbody>
 			<tr>
-				<td>NAME</td>
-				<td>Bruce Wilson</td>
+				<th>NAME</th>
+				<th>Bruce Wilson</th>
 			</tr>
 			<tr>
-				<td>BIRTHDAY</td>
-				<td>4th April 1990</td>
+				<th>BIRTHDAY</th>
+				<th>4th April 1990</th>
 			</tr>
 			<tr>
-				<td>AGE</td>
-				<td>31 Years</td>
+				<th>AGE</th>
+				<th>31 Years</th>
 			</tr>
 			<tr>
-				<td>ADDRESS</td>
-				<td>San Francisco</td>
+				<th>ADDRESS</th>
+				<th>San Francisco</th>
 			</tr>
 			<tr>
-				<td>PHONE</td>
-				<td>(+38) 469 2344 2364</td>
+				<th>PHONE</th>
+				<th><a href="tel:+3846923442364">(+38) 469 2344 2364</a></th>
 			</tr>
 			<tr>
-				<td>EMAIL</td>
-				<td>trendycoder.com@gmail.com</td>
+				<th>EMAIL</th>
+				<th><a href="mailto:trendycoder.com@gmail.com">trendycoder.com@gmail.com</a></th>
 			</tr>
 			<tr>
-				<td>SKYPE</td>
-				<td>brucewilson.90</td>
+				<th>SKYPE</th>
+				<th><a href="skype:brucewilson.90">brucewilson.90</a></th>
 			</tr>
+		</tbody>
 		 </table>
+		</div>
+		<div class="about_right table_docs">
+			<a href="Image/cv.jpg">Download Now</a>
+		</div>
 		</div>
 		<div class="tabs">
 			<div class="tab_header">
 				<ul>
-					<li>Experience</li>
-					<li>Education</li>
-					<li>Skills</li>
+					<li><a href="#">Experience</a></li>
+					<li><a href="#">Education</a></li>
+					<li><a href="#">Skills</a></li>
 				</ul>
 			</div>
 			<div class="tab_content">
@@ -125,7 +134,7 @@
 						</ul>
 					</div>
 				</div>
-				<div id="tab2" class="tab_item">
+				<!-- <div id="tab2" class="tab_item">
 					<div class="boxed_list">
 						<ul>
 							<li>
@@ -160,20 +169,20 @@
 							</li>
 						</ul>
 					</div>
-				</div>
-				<div id="tab3" class="tab_item">
+				</div> -->
+				<!-- <div id="tab3" class="tab_item">
 					<div class="linebar_box">
-						<div class="linebar"></div>
-						<div class="linebar"></div>
-						<div class="linebar"></div>
-						<div class="linebar"></div>
+						<div class="linebar"><hr></div>
+						<div class="linebar"><hr></div>
+						<div class="linebar"><hr></div>
+						<div class="linebar"><hr></div>
 					</div>
 					<div class="resumo_desc">
 						<p>
 							A freelance creative designer with a love for minimal design, clean typography and well-written code, located in San Francisco. Provide high quality and cost effective offshore web and software development services. Wide range of web and software development services across the world.
 						</p>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	  </div>
@@ -253,12 +262,14 @@
 		<h3 class="subtitle">Customers</h3>
 		<h3 class="title">Happy People</h3>
 		<div class="parteners">
-			<img src="" alt="">
-			<img src="" alt="">
-			<img src="" alt="">
-			<img src="" alt="">
-			<img src="" alt="">
-			<img src="" alt="">
+			<img src="Image/1.png" alt="">
+			<img src="Image/2.png" alt="">
+			<img src="Image/3.png" alt="">
+			<img src="Image/4.png" alt="">
+			<img src="Image/5.png" alt="">
+			<img src="Image/6.png" alt="">
+			<img src="Image/7.png" alt="">
+			<img src="Image/3 (1).png" alt="">
 		</div>
 		<button>Arrow1</button>
 		<button>Arrow2</button>
