--- a/index.html
+++ b/index.html
@@ -193,30 +193,32 @@
 		<h3 class="title">Featured Project</h3>
 		<button>Arrow1</button>
 		<button>Arrow2</button>
+		<div class="Cards">
 		<div class="card card1">
-			<img src="" alt="">
+			<img src="Image/icecream.png" alt="icecream">
 			<p>web, mobile , online</p>
-			<p>Delicious Fruit</p>
+			<h3>Delicious Fruit</h3>
 		</div>
 		<div class="card card2">
-			<img src="" alt="">
+			<img src="Image/strawberry.png" alt="strawberry">
 			<p>design , vector</p>
-			<p>Blue Lemon</p>
+			<h3>Blue Lemon</h3>
 		</div>
 		<div class="card card3">
-			<img src="" alt="">
+			<img src="Image/Olive.png" alt="Olive">
 			<p>mobile , design</p>
-			<p>Yellow Phone</p>
+			<h3>Yellow Phone</h3>
 		</div>
-		<div class="card card4">
+		<!-- <div class="card card4">
 			<img src="" alt="">
 			<p>mobile , design</p>
-			<p>Ice Cream</p>
+			<h3>Ice Cream</h3>
 		</div>
 		<div class="card card5">
 			<img src="" alt="">
 			<p>illustrantion , design</p>
-			<p>Sweet Cherry</p>
+			<h3>Sweet Cherry</h3>
+		</div> -->
 		</div>
 	  </div>
 	 </section>
@@ -261,15 +263,18 @@
 	  <div id="Customers" class="Customers_container">
 		<h3 class="subtitle">Customers</h3>
 		<h3 class="title">Happy People</h3>
-		<div class="parteners">
-			<img src="Image/1.png" alt="">
-			<img src="Image/2.png" alt="">
-			<img src="Image/3.png" alt="">
-			<img src="Image/4.png" alt="">
-			<img src="Image/5.png" alt="">
-			<img src="Image/6.png" alt="">
-			<img src="Image/7.png" alt="">
-			<img src="Image/3 (1).png" alt="">
+		<div class="partners">
+			<ul>
+				<li><a href=""> <img src="Image/1.png" alt=""></a> </li>
+				<li><a href=""> <img src="Image/2.png" alt=""></a> </li>
+				<li><a href=""> <img src="Image/3.png" alt=""></a> </li>
+				<li><a href=""> <img src="Image/4.png" alt=""></a> </li>
+				<li><a href=""> <img src="Image/5.png" alt=""></a> </li>
+				<li><a href=""> <img src="Image/6.png" alt=""></a> </li>
+				<li><a href=""> <img src="Image/7.png" alt=""></a> </li>
+				<li><a href=""> <img src="Image/8.png" alt=""></a> </li>
+			</ul>
+
 		</div>
 		<button>Arrow1</button>
 		<button>Arrow2</button>
@@ -278,10 +283,10 @@
 			<p class="resumo_desc">
 				“ This was exactly what I needed for my portfolio, and it looks great. I had a couple issues that support helped troubleshoot both via email and on the comments, which definitely made it worth the price. I'm very pleased with this purchase. ”
 			</p>
-			<h3>Anna Barbera</h3>
-			<h3>Photographer</h3>
+			<h3 class="title">Anna Barbera</h3>
+			<h3 class="subtitle">Photographer</h3>
 		 </div>
-		 <div class="testimonials2">
+		 <!-- <div class="testimonials2">
 			<p class="resumo_desc">
 				“ Had a problem with the layout after Installation- found no approach. The support reacted quickly and competently. And solved the problem between Elementor and a WordPress update. Great! ”
 			</p>
@@ -294,16 +299,63 @@
 			</p>
 			<h3>Alberrt Walker</h3>
 			<h3>Freelancer and Designer</h3>
-		 </div>
+		 </div> -->
 		</div>
 	  </div>
 	 </section>
 	 <section class="Container">
 	  <div id="NewsTips" class="NewsTips_container">
-		<h3 class="subtitle">News And Tips</h3>
-		<h3 class="title">Latest Articles</h3>
-		<p class="resumo_desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern websites, web services and online stores.</p>
-		<p>Bruce Wilson</p>
+		    <h3 class="subtitle">News And Tips</h3>
+		    <h3 class="title">Latest Articles</h3>
+		<div class="blog_list">
+			<ul>
+				<li>
+					<div class="item modal_item" data-index="1">
+						<div class="img_holder">
+							<img src="Image/news&letter1.png" alt="">
+						</div>
+						<div class="title_holder">
+							<p>September 22, 2021</p>
+							<h3>Five Solid Evidences Attending Design Is Good For Your Career Development.</h3>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="item modal_item" data-index="2">
+						<div class="img_holder">
+							<img src="Image/news&letter2.png" alt="">
+						</div>
+						<div class="title_holder">
+							<p>September 17, 2021</p>
+							<h3>Ten Mind-Blowing Reasons Why Design Is Using This Technique For Exposure.</h3>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="item modal_item" data-index="3">
+						<div class="img_holder">
+							<img src="Image/news&letter3.png" alt="">
+						</div>
+						<div class="title_holder">
+							<p>September 04, 2021</p>
+							<h3>I Will Tell You The Truth About Design In The Next 60 Seconds.</h3>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="item modal_item" data-index="4">
+						<div class="img_holder">
+							<img src="Image/news&letter4.png" alt="">
+						</div>
+						<div class="title_holder">
+							<p>August 18, 2021</p>
+							<h3>What You Know About Design And What You Don't
+								Know About Design.</h3>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</div>
 	  </div>
 	 </section>
 	 <section class="Container">
